--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,7 +61,6 @@ dependencies {
     compile 'com.daimajia.androidanimations:library:2.2@aar'
     compile 'com.github.ksoichiro:android-observablescrollview:1.6.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.mindorks:placeholderview:0.7.0'
     compile 'jp.wasabeef:glide-transformations:2.0.2'
     compile 'jp.wasabeef:blurry:2.1.1'
@@ -79,12 +78,17 @@ dependencies {
     compile files('libs/YouTubeAndroidPlayerApi.jar')
     compile 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
     compile 'com.kila.apprater_dialog.lars:apprater-dialog:1.0.5'
+    compile "com.yuyakaido.android:card-stack-view:1.0.0-beta8"
+    compile 'com.android.support:cardview-v7:26.1.0'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0'
 
     implementation 'com.google.android.gms:play-services-maps:11.8.0'
     implementation 'com.google.android.gms:play-services-location:11.8.0'
     implementation 'com.google.android.gms:play-services-places:11.8.0'
 
 }
+
 
 
 
