--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,11 +83,16 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0'
 
+    //rssfeed
+    implementation 'com.github.sharish:ShimmerRecyclerView:v1.2'
+    implementation 'io.supercharge:shimmerlayout:1.1.0'
+
     implementation 'com.google.android.gms:play-services-maps:11.8.0'
     implementation 'com.google.android.gms:play-services-location:11.8.0'
     implementation 'com.google.android.gms:play-services-places:11.8.0'
 
 }
+
 
 
 
