--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ allprojects {
     repositories {
         mavenCentral()
         jcenter()
+        maven { url "https://jitpack.io"}
         google()
     }
 }
