--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,11 +87,15 @@ dependencies {
     implementation 'com.github.sharish:ShimmerRecyclerView:v1.2'
     implementation 'io.supercharge:shimmerlayout:1.1.0'
 
+    //auditions
+    implementation 'com.ramotion.foldingcell:folding-cell:1.2.1'
+
     implementation 'com.google.android.gms:play-services-maps:11.8.0'
     implementation 'com.google.android.gms:play-services-location:11.8.0'
     implementation 'com.google.android.gms:play-services-places:11.8.0'
 
 }
+
 
 
 
