--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,7 @@ android {
     dataBinding{
         enabled=true
     }
+
 }
 
 repositories {
@@ -50,6 +51,13 @@ dependencies {
     compile 'com.google.android.gms:play-services-auth:11.8.0'
 
     //other libraries
+    compile('com.weiwangcn.betterspinner:library-material:1.1.0') {
+        exclude group: 'com.android.support', module: 'appcompat-v7'
+    }
+
+    compile 'com.steelkiwi:cropiwa:1.0.3'
+
+    compile 'com.github.jrvansuita:PickImage:+'
     compile 'com.android.support:recyclerview-v7:26.+'
     compile 'com.android.support:preference-v14:26.+'
     compile 'com.android.support:appcompat-v7:26.1.0'
@@ -104,23 +112,17 @@ dependencies {
     compile 'com.github.GrenderG:Toasty:1.2.8'
 
     //talent hunter
-
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'io.reactivex.rxjava2:rxjava:2.1.2'
     compile 'com.github.blocoio:faker:1.2.5'
     compile 'org.greenrobot:eventbus:3.0.0'
+
 
     implementation 'com.google.android.gms:play-services-maps:11.8.0'
     implementation 'com.google.android.gms:play-services-location:11.8.0'
     implementation 'com.google.android.gms:play-services-places:11.8.0'
 
 }
-
-
-
-
-
-
 
 
 apply plugin: 'com.google.gms.google-services'
