Avinash: signup3 updates

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <uses-feature android:name="android.hardware.camera" />
+
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
@@ -34,7 +35,7 @@
         <activity
             android:name=".app_startup.Login2"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.AppCompat.NoActionBar"
+            android:theme="@style/AppThemeTransparent"
             android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -45,29 +46,34 @@
         <activity
             android:name=".app_startup.Login"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.AppCompat.NoActionBar"
+            android:theme="@style/AppThemeTransparent"
             android:windowSoftInputMode="adjustPan" />
 
         <!-- registration -->
         <activity
+            android:name=".registration.StartingScreen"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme"
+            android:windowSoftInputMode="adjustPan" />
+        <activity
             android:name=".registration.signup"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.AppCompat.NoActionBar"
+            android:theme="@style/AppTheme"
             android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".registration.signup2"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.AppCompat.NoActionBar"
+            android:theme="@style/AppTheme"
             android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".registration.signup3"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.AppCompat.NoActionBar"
+            android:theme="@style/AppTheme"
             android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".registration.Verification"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.AppCompat.NoActionBar"
+            android:theme="@style/AppTheme"
             android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".ForgotPassword"
@@ -76,8 +82,9 @@
             android:name=".ForgotPasswordPopUp"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.CustomTheme" />
-        <activity android:name=".registration.EditPictureActivity"
-            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".registration.EditPictureActivity"
+            android:screenOrientation="portrait" />
 
         <!-- import images from gallery/camera -->
         <provider
@@ -90,7 +97,6 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/picker_provider_paths" />
         </provider>
-
 
         <!-- Facebook SDK Integration -->
         <meta-data
@@ -138,12 +144,11 @@
         <!-- Main App -->
         <activity
             android:name=".Main2Activity"
+            android:theme="@style/AppTheme2"
             android:screenOrientation="portrait" />
         <activity
             android:name=".Main3Activity"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".registration.StartingScreen"
+            android:theme="@style/AppTheme2"
             android:screenOrientation="portrait" />
         <activity
             android:name=".PurchaseCoins"
@@ -159,12 +164,14 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".ProfileView"
+            android:theme="@style/AppTheme2"
             android:screenOrientation="portrait" />
         <activity
             android:name=".YoutubePlayerActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".CreateAuditions"
+            android:theme="@style/AppTheme"
             android:screenOrientation="portrait" />
 
         <!-- Razor Pay Integration -->
@@ -219,29 +226,30 @@
             android:name=".Settings"
             android:parentActivityName=".Main2Activity"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.AppCompat" />
+            android:theme="@style/AppTheme3" />
         <activity
             android:name=".AccountInfo"
             android:parentActivityName=".Settings"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.AppCompat.NoActionBar" />
+            android:theme="@style/AppTheme2" />
         <activity
             android:name=".AboutUs"
             android:parentActivityName=".Settings"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.AppCompat.NoActionBar" />
+            android:theme="@style/AppTheme2" />
         <activity
             android:name=".TermsConditions"
             android:parentActivityName=".AboutUs"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.AppCompat" />
+            android:theme="@style/AppTheme3" />
         <activity
             android:name=".PrivacyPolicy"
             android:parentActivityName=".AboutUs"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.AppCompat" />
+            android:theme="@style/AppTheme3" />
         <activity
             android:name=".ProfileViewEdit"
+            android:theme="@style/AppTheme2"
             android:screenOrientation="portrait" />
         <activity
             android:name=".RateUs"
@@ -252,7 +260,7 @@
             android:label="@string/title_activity_maps" />
         <activity android:name=".RSSMain" />
         <activity android:name=".LuckyWheelMain" />
-        <activity android:name=".main.TalentHunterMain"/>
+        <activity android:name=".garlandview.main.TalentHunterMain" />
     </application>
 
 </manifest>
