--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,8 +19,8 @@ android {
         }
     }
 
-    dataBinding{
-        enabled=true
+    dataBinding {
+        enabled = true
     }
 
 }
@@ -56,6 +56,7 @@ dependencies {
     }
 
     compile 'com.steelkiwi:cropiwa:1.0.3'
+    implementation 'info.androidhive:imagefilters:1.0.7'
 
     compile 'com.github.jrvansuita:PickImage:+'
     compile 'com.android.support:recyclerview-v7:26.+'
@@ -123,6 +124,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-places:11.8.0'
 
 }
+
 
 
 apply plugin: 'com.google.gms.google-services'
