--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,18 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" />
 
+
+
+
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <permission
+        android:name="com.twenty.four.crafts.permission.C2D_MESSAGE"
+        android:protectionLevel="signature" />
+    <uses-permission android:name="com.twenty.four.crafts.permission.C2D_MESSAGE" />
+
+
     <application
         android:name=".GarlandApp"
         android:allowBackup="true"
@@ -253,6 +265,39 @@
         <activity android:name=".RSSMain" />
         <activity android:name=".LuckyWheelMain" />
         <activity android:name=".main.TalentHunterMain"/>
+
+        <receiver
+            android:name="com.google.android.gms.gcm.GcmReceiver"
+            android:exported="true"
+            android:permission="com.google.android.c2dm.permission.SEND" >
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+                <category android:name="com.example.gcm" />
+            </intent-filter>
+        </receiver>
+
+        <service
+            android:name="com.twenty.four.crafts.pushnotif.GCMService"
+            android:exported="false" >
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+            </intent-filter>
+        </service>
+
+        <service
+            android:name="com.twenty.four.crafts.pushnotif.GCMInstanceIDListenerService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.android.gms.iid.InstanceID"/>
+            </intent-filter>
+        </service>
+
+        <service
+            android:name="com.twenty.four.crafts.pushnotif.RegistrationIntentService"
+            android:exported="false">
+        </service>
+
+        <activity android:name=".PushNotifMain"/>
     </application>
 
 </manifest>
