--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ repositories {
 }
 
 dependencies {
+    implementation 'com.android.support:support-v4:26.1.0'
     compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
@@ -55,8 +56,18 @@ dependencies {
         exclude group: 'com.android.support', module: 'appcompat-v7'
     }
 
+    //crop images
     compile 'com.steelkiwi:cropiwa:1.0.3'
+
+    // image filters
     implementation 'info.androidhive:imagefilters:1.0.7'
+
+    // butter knife
+    compile 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+
+    // dexter M permissions for crop
+    compile 'com.karumi:dexter:4.1.0'
 
     compile 'com.github.jrvansuita:PickImage:+'
     compile 'com.android.support:recyclerview-v7:26.+'
@@ -79,7 +90,6 @@ dependencies {
     compile 'jp.wasabeef:blurry:2.1.1'
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
-    compile 'com.jakewharton:butterknife:8.6.0'
     compile 'com.google.code.gson:gson:2.7'
     compile 'com.google.dagger:dagger:2.10'
     compile 'junit:junit:4.12'
@@ -129,6 +139,10 @@ dependencies {
     implementation 'com.google.android.gms:play-services-places:11.8.0'
 
 }
+
+
+
+
 
 
 
