--- a/app/build.gradle
+++ b/app/build.gradle
@@ -138,6 +138,11 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:11.8.0'
     implementation 'com.google.android.gms:play-services-places:11.8.0'
 
+    compile 'com.thefinestartist:finestwebview:1.2.7'
+
+
+
+
 }
 
 
