--- a/app/build.gradle
+++ b/app/build.gradle
@@ -139,6 +139,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-places:11.8.0'
 
     compile 'com.thefinestartist:finestwebview:1.2.7'
+    compile 'com.yarolegovich:lovely-dialog:1.1.0'
 
 
 
