--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -109,7 +109,6 @@
             android:name=".EditPictureforAuditions"
             android:screenOrientation="portrait" />
 
-
         <!-- import images from gallery/camera -->
         <provider
             android:name="android.support.v4.content.FileProvider"
@@ -249,7 +248,7 @@
         <activity
             android:name=".registration.ChooseCraftOrClient"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.CustomThemeLangs"/>
+            android:theme="@style/AppTheme.CustomThemeLangs" />
 
         <!-- Settings -->
         <activity
@@ -322,7 +321,7 @@
             android:exported="false" />
 
         <activity android:name=".PushNotifMain" />
-
+        <activity android:name=".ClientVerification1"></activity>
     </application>
 
 </manifest>
