--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -89,7 +89,7 @@
         <activity
             android:name=".registration.Verification"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme"
+            android:theme="@style/AppTheme3"
             android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".ForgotPassword"
