if the verification page looks lit, dont blame me. also, some other changes have been done :)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
 
     <uses-permission android:name="com.twenty.four.crafts.permission.C2D_MESSAGE" />
 
+
     <application
         android:name=".GarlandApp"
         android:allowBackup="true"
@@ -55,8 +56,13 @@
             android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="oauth" android:host="t4jsample"/>
             </intent-filter>
         </activity>
         <activity
