--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -335,7 +335,8 @@
         <activity android:name=".ClientVerification1Activity" />
         <activity android:name=".ClientVerification2Activity" />
         <activity android:name=".ClientVerification3Activity" />
-        <activity android:name=".registration.OnBoardingPage"></activity>
+        <activity android:name=".registration.OnBoardingPage" />
+        <activity android:name=".RadarView"></activity>
     </application>
 
 </manifest>
