--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
     <uses-permission android:name="com.twenty.four.crafts.permission.C2D_MESSAGE" />
 
     <application
-        android:name=".GarlandApp"
+        android:name=".NetworkController"
         android:allowBackup="true"
         android:icon="@drawable/logo"
         android:label="@string/app_name"
@@ -300,7 +300,6 @@
             android:label="@string/title_activity_maps" />
         <activity android:name=".RSSMain" />
         <activity android:name=".LuckyWheelMain" />
-        <activity android:name=".garlandview.main.TalentHunterMain" />
 
         <receiver
             android:name="com.google.android.gms.gcm.GcmReceiver"
