Edit auditions to be completed (done with the rest)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -348,7 +348,8 @@
         <activity android:name=".ChangePassword" />
         <activity android:name=".ClientVerification4Activity" />
         <activity android:name=".ClientVerification5Activity" />
-        <activity android:name=".ClientVerification6Activity"></activity>
+        <activity android:name=".ClientVerification6Activity" />
+        <activity android:name=".EditAudition"></activity>
     </application>
 
 </manifest>
